@@ -1,7 +1,5 @@
 package run.runc.data;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Random;
 
@@ -10,7 +8,7 @@ public enum MailingsLanguage {
     RU, EN;
 
     private static final List<MailingsLanguage> VALUES =
-            Collections.unmodifiableList(Arrays.asList(values()));
+            List.of(values());
     private static final int SIZE = VALUES.size();
     private static final Random RANDOM = new Random();
 
